add missing desc

--- a/docs/upgrade-guides/api-keys.mdx
+++ b/docs/upgrade-guides/api-keys.mdx
@@ -1,6 +1,6 @@
 ---
 title: Publishable and Secret Keys
-description:
+description: Dive into Clerk's latest V3 update.
 ---
 
 # Publishable and Secret Keys
