Use SVG from Figma instead of webp for better image quality

--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -9,7 +9,7 @@ description: The <OrganizationList /> component is used to display organization 
   alt="Organization List Example"
   width={992}
   height={568}
-  src="/docs/images/ui-components/component-org_list.webp"
+  src="/docs/images/ui-components/component-org_list.svg"
 />
 
 The `<OrganizationList />` component is used to display organization related memberships, invitations, and suggestions for the user.
