fix broken table

--- a/docs/upgrade-guides/url-based-session-syncing.mdx
+++ b/docs/upgrade-guides/url-based-session-syncing.mdx
@@ -3,6 +3,11 @@ title: URL-based session syncing
 description: Development instances communicating with the Frontend API without third-party cookies.
 ---
 
+---
+title: URL-based session syncing
+description: Development instances communicating with the Frontend API without third-party cookies.
+---
+
 # URL-based session syncing
 
 Development instances created before December 6, 2022 communicate with Clerk's Frontend API using third-party cookies. More concretely, the authentication state of the current session is transported via a long-lived third-party cookie, between your frontend (e.g. `localhost:3000`) and the Frontend API (e.g. `clerk.happy.hippo-1.lcl.dev`).
@@ -17,7 +22,7 @@ URL-based session syncing (previously known as Cookieless Development mode) is a
 
 To opt-in to URL-based session syncing, perform the following steps:
 
-- In the Clerk Dashboard, navigate to your development instance's [Settings](https://dashboard.clerk.com/last-active?path=settings) page and toggle on Enable URL-based session syncing.
+- In the Clerk Dashboard, navigate to your development instance's [Settings](https://dashboard.clerk.com/last-active?path=settings) page and toggle on **Enable URL-based session syncing**.
 - Upgrade `@clerk/clerk-react` to v4.4.5 or later. If your are importing `@clerk/clerk-js` to your project, use v4.18.0 or later.
 
 ## Clerk Account Portal pages and redirects
