--- a/docs/upgrade-guides/v3-client-side-changes.mdx
+++ b/docs/upgrade-guides/v3-client-side-changes.mdx
@@ -17,6 +17,7 @@ npm install @clerk/clerk-react@latest
 ```
 </CodeBlockTabs>
 
+
 ## `useAuth()` introduction
 
 [`useAuth()`][use-auth] is a new, SSR-compatible hook that is recommended for all authentication tasks.
@@ -37,7 +38,7 @@ The [`useAuth()`][use-auth] hook unifies the way you access common auth operatio
 - `useSession()` to access `getToken()` or the `sessionId`
 - `useUser()` to access `getToken()` for integrations
 - `useClerk()` to access `signOut()`
-- `<SignedIn>` and `<SignedOut>` in a way that requires extra components
+- `<SignedIn />` and `<SignedOut />` in a way that requires extra components
 
 ## Hook and component API changes
 
@@ -45,9 +46,9 @@ Version 3 changes several APIs for improved consistency and usability.
 
 ### `useUser()` and `useSession()`
 
-Previously, `useUser` and `useSession` could only be called from inside the `<SignedIn/>` component. This restriction has been relaxed, but now developers must manually handle the possibility the user and session objects may not be loaded when the hook is called.
+Previously, `useUser` and `useSession` could only be called from inside the `<SignedIn />` component. This restriction has been relaxed, but now developers must manually handle the possibility the user and session objects may not be loaded when the hook is called.
 
-In a future version, we plan to support React `<Suspense/>` to make this even easier.
+In a future version, we plan to support React `<Suspense />` to make this even easier.
 
 | Old API | New API |
 | --- | --- |
@@ -88,7 +89,7 @@ Props which take URLs (absolute or relative) have been standardized to use the U
 
 ### `useSignUp()` & `useSignIn()`
 
-`useSignUp()` and `useSignIn()` are no longer required to be contained in `<SignedOut/>` or `<ClerkLoaded/>`. Instead, they have been updated to include a loading state.
+`useSignUp()` and `useSignIn()` are no longer required to be contained in `<SignedOut />` or `<ClerkLoaded />`. Instead, they have been updated to include a loading state.
 
 | Old API | New API |
 | --- | --- |
@@ -117,7 +118,7 @@ Respecting the camelCase changes we explained at the start of this section, all 
 
 | Old API | New API |
 | --- | --- |
-| `User.getToken("token-name") | `const { getToken } = useAuth();` <br />or `getToken({ template: "integration_token-name" })` <br />or `Session.getToken({template: "integration_token-name"})` |
+| `User.getToken("token-name")` | `const { getToken } = useAuth();` <br />or `getToken({ template: "integration_token-name" })` <br />or `Session.getToken({template: "integration_token-name"})` |
 | `User.createEmailAddress(value)` | `User.createEmailAddress({ email: value })` |
 | `User.createPhoneNumber(value)` | `User.createPhoneNumber({ phoneNumber: value })` |
 | `User.setProfileImage(file)` | `User.setProfileImage(file)` |
@@ -132,4 +133,4 @@ The `createMagicLinkFlow` and `authenticateWithRedirect` calls have had paramete
 | `createMagicLinkFlow({ callbackUrl })` | `createMagicLinkFlow({ redirectUrl })` |
 | `authenticateWithRedirect({ callbackUrl, callbackUrlComplete })` | `authenticateWithRedirect({ redirectUrl, redirectUrlComplete })` |
 
-[use-auth]: /docs/references/react/use-auth#use-auth
+[use-auth]: /docs/references/react/use-auth
