--- a/docs/upgrade-guides/v3-express-server-side-changes.mdx
+++ b/docs/upgrade-guides/v3-express-server-side-changes.mdx
@@ -30,4 +30,4 @@ app.get('/', (req, res) => {
 })
 ```
 
-[use-auth]: /docs/references/react/use-auth#use-auth
+[use-auth]: /docs/references/react/use-auth
