--- a/docs/upgrade-guides/v3-nextjs-server-side-changes.mdx
+++ b/docs/upgrade-guides/v3-nextjs-server-side-changes.mdx
@@ -45,4 +45,4 @@ export const middleware = withEdgeMiddlewareAuth((req, ev) => {
 });
 ```
 
-[use-auth]: /docs/references/react/use-auth#use-auth
+[use-auth]: /docs/references/react/use-auth
