--- a/docs/components/control/redirect-to-signup.mdx
+++ b/docs/components/control/redirect-to-signup.mdx
@@ -96,4 +96,4 @@ export default function Index() {
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign-in or sign-up. This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | Full URL or path to navigate after successful sign-in. |
 | `afterSignUpUrl` | `string` | Full URL or path to navigate after successful sign-up. |
-| `initialValues` | [`SignUpitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
+| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
