--- a/docs/references/javascript/types/sign-up-initial-values.mdx
+++ b/docs/references/javascript/types/sign-up-initial-values.mdx
@@ -11,8 +11,8 @@ The type for the `initialValues` prop that is used to pre-populate the sign-up f
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `emailAddress?` | `string | undefined` | The email address of the user. |
-| `username?` | `string | undefined` | The username of the user. |
-| `phoneNumber?` | `string | undefined` | The phone number of the user. |
-| `firstName?` | `string | undefined` | The first name of the user. |
-| `lastName?` | `string | undefined` | The last name of the user. |
+| `emailAddress?` | `string \| undefined` | The email address of the user. |
+| `username?` | `string \| undefined` | The username of the user. |
+| `phoneNumber?` | `string \| undefined` | The phone number of the user. |
+| `firstName?` | `string \| undefined` | The first name of the user. |
+| `lastName?` | `string \| undefined` | The last name of the user. |
