--- a/docs/references/javascript/types/sign-up-redirect-options.mdx
+++ b/docs/references/javascript/types/sign-up-redirect-options.mdx
@@ -14,4 +14,4 @@ An interface that provides options for sign-up redirect methods.
 | `afterSignInUrl` | `string \| null \| undefined` | Full URL or path to navigate after successful sign-in. |
 | `afterSignUpUrl` | `string \| null \| undefined` | Full URL or path to navigate after successful sign-up. Sets the `afterSignUpUrl` if the "Sign up" link is clicked. |
 | `redirectUrl` | `string \| null \| undefined` | Full URL or path to navigate after successful sign in, or sign up.<br/>The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values)` | The values used to prefill the sign-up fields with. |
+| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
