ORG-187 Add documentation for Organization Domains and <OrganizationList /> (#271)
Co-authored-by: panteliselef <panteliselef@outlook.com>

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -33,9 +33,11 @@ All members of an organization, regardless of their role, can view information a
 
 Administrators can [invite other users to join the organization](/docs/organizations/inviting-users). An invitation email is sent out, and organization invitations support adding existing users of your application, or new ones. New users can register once they accept the invitation.
 
+Administrators can also use [verified domains](/docs/organizations/verified-domains) to enhance how users can join organizations. Once a verified domain is added to an organization, administrators can choose between different enrollment modes that will determine how new members will be added.
+
 Administrators can [manage roles](/docs/organizations/managing-roles), such as revoking an invitation for a user that hasn't joined yet or removing a user who is already a member from the organization. When removing organization members or updating their role, there needs to be at least one administrator for the organization at all times.
 
-Administrators can also [update an organization name](/docs/organizations/updating-organizations). 
+Administrators can also [update an organization name](/docs/organizations/updating-organizations).
 
 Using the [Organizations Backend API](https://clerk.com/docs/reference/backend-api/tag/Organizations), you can provide additional metadata for the organization and set custom attributes. Organizations support both private and public metadata. Private metadata can only be accessed from the Backend API. Public metadata can be accessed from the Backend API, and are read-only from the Frontend API. Learn more about organization metadata [here](/docs/organizations/metadata).
 
