--- a/docs/references/javascript/types/sign-in-initial-values.mdx
+++ b/docs/references/javascript/types/sign-in-initial-values.mdx
@@ -11,6 +11,6 @@ The type for the `initialValues` prop that is used to pre-populate the sign-in f
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `emailAddress?` | `string` | The email address of the user. |
-| `username?` | `string` | The username of the user. |
-| `phoneNumber?` | `string` | The phone number of the user. |
+| `emailAddress?` | `string /| undefined` | The email address of the user. |
+| `username?` | `string /| undefined` | The username of the user. |
+| `phoneNumber?` | `string /| undefined` | The phone number of the user. |
