clean up react hook reference pages

--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -1,11 +1,11 @@
 ---
 title: useUser()
-description: The `useUser` hook is used to get the current user object and to update the user's data on the client side.
+description: The useUser() hook is used to get the current user object and to update the user's data on the client side.
 ---
 
 # `useUser()`
 
-The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
+The `useUser()` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
 ## Usage
 
@@ -159,17 +159,8 @@ export default function Home() {
 
 ## Return value
 
-<Tables 
-  headings={["Variables", "Description"]} 
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-    {
-      cells: ["isSignedIn", "A boolean that returns true if the user is signed in."]
-    },
-    {
-      cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
-    },
-    {
-      cells: ["user", "An object containing the user's data. If the user is not signed in, user will be null."]
-    },
-  ]} />
+| Variables | Description |
+| --- | --- |
+| `isSignedIn` | A boolean that returns `true` if the user is signed in. |
+| `isLoaded` | A boolean that until Clerk loads and initializes, will be set to `false`. Once Clerk loads, `isLoaded` will be set to `true`. |
+| `user` | An object containing the user's data. If the user is not signed in, `user` will be `null`. |
