--- a/docs/references/react/use-clerk.mdx
+++ b/docs/references/react/use-clerk.mdx
@@ -1,15 +1,11 @@
 ---
 title: useClerk()
-description: The `useClerk` hook provides access to the Clerk object, giving you the ability to build alternatives to any Clerk Component.
+description: The useClerk() hook provides access to the Clerk object, giving you the ability to build alternatives to any Clerk Component.
 ---
-
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useClerk()`
 
-The `useClerk` hook provides access to the the [`Clerk`](/docs/references/javascript/clerk/clerk) object, giving you the ability to build alternatives to any Clerk Component.
+The `useClerk()` hook provides access to the the [`Clerk`](/docs/references/javascript/clerk/clerk) object, giving you the ability to build alternatives to any Clerk Component.
 
 <Callout type="warning">
   This is intended to be used for advanced use cases, like building a completely custom OAuth flow or as an escape hatch giving access to lower-level APIs.
