--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -1,15 +1,11 @@
 ---
 title: useSessionList()
-description: The `useSessionList` hook returns an array of Session objects that have been registered on the client device.
+description: The useSessionList() hook returns an array of Session objects that have been registered on the client device.
 ---
-
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useSessionList()`
 
-The `useSessionList` hook returns an array of `Session` objects that have been registered on the client device.
+The useSessionList() hook returns an array of [`Session`](/docs/references/javascript/session) objects that have been registered on the client device.
 
 ## Usage
 
@@ -57,7 +53,7 @@ export default function Home() {
 
 | Values | Description |
 | --- | --- |
-| `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
+| `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
 | `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
 | `setSession()` | A function that sets the active session. |
-| `sessions` | Holds an array of `Session` objects that have been registered on the client device. |
+| `sessions` | Holds an array of [`Session`](/docs/references/javascript/session) objects that have been registered on the client device. |
