--- a/docs/references/react/overview.mdx
+++ b/docs/references/react/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: Clerk React
-description: Learn about Clerk's React SDK and how to utilize Clerk React components in your application.
+title: Clerk React SDK
+description: Learn how to integrate React into your Clerk application.
 ---
 
 # Clerk React
