--- a/docs/references/react/overview.mdx
+++ b/docs/references/react/overview.mdx
@@ -3,7 +3,7 @@ title: Clerk React SDK
 description: Learn how to integrate React into your Clerk application.
 ---
 
-# Clerk React
+# Clerk React SDK
 
 Clerk React is a wrapper around ClerkJS. It is the recommended way to integrate Clerk into your React application.
 
