--- a/docs/references/nodejs/token-verification.mdx
+++ b/docs/references/nodejs/token-verification.mdx
@@ -1,5 +1,56 @@
 ---
-sanity_slug: /docs/reference/node/networkless-token-verification
+title: Networkless token verification
+description: Clerk's JWT session token can be verified in a networkless manner using the JWT verification key.
 ---
 
-# This is a stub
+# Networkless token verification
+
+Clerk's JWT session token can be verified in a networkless manner using the JWT verification key. By default, Clerk will use our JWKs endpoint to fetch and cache the key for any subsequent verification. If you use the `CLERK_JWT_KEY` environment variable to supply the key, Clerk will pick it up and do networkless verification for session tokens using it.
+
+To learn more about Clerk's token verification, you can find more information on our guide to [validating session tokens](/docs/backend-requests/handling/manual-jwt).
+
+The value of the JWT verification key can also be added on the instance level or on any single middleware call e.g. for Next.js.
+
+```js
+import { withAuth } from '@clerk/nextjs/api';
+
+const handler = (req, res) => {
+  // ...
+};
+
+withAuth(handler, { jwtKey: 'my_clerk_public_key' });
+```
+
+Custom instance initialization:
+
+```js
+import Clerk from '@clerk/clerk-sdk-node/instance';
+
+const clerk = new Clerk({ jwtKey: 'my_clerk_public_key' });
+```
+
+## Validate the Authorized Party of a session token
+
+Clerk's JWT session token contains the `azp` claim, which equals the Origin of the request during token generation. You can provide the middlewares with a list of whitelisted origins to verify against, to protect your application of the subdomain cookie leaking attack. You can find an example below:
+
+<CodeBlockTabs options={["Express", "Next.js"]}>
+```js
+import { ClerkExpressRequireAuth } from '@clerk/clerk-sdk-node';
+
+const authorizedParties = ['http://localhost:3000', 'https://example.com'];
+
+app.use(ClerkExpressRequireAuth({ authorizedParties }));
+```
+
+```js
+import { requireAuth } from '@clerk/nextjs/api';
+
+const authorizedParties = ['http://localhost:3000', 'https://example.com']
+
+function handler(req: RequireAuthProp<NextApiRequest>, res: NextApiResponse) {
+  // do something with the auth attribute
+}
+
+export requireAuth(handler, { authorizedParties });
+```
+</CodeBlockTabs>
