fix inject keys

--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -38,7 +38,7 @@ Below is an example of an `.env.local` file. If you are signed into your Clerk D
 <InjectKeys>
 
 ```sh filename=".env.local"
-CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••
+CLERK_SECRET_KEY={{secret}}
 ```
 
 </InjectKeys>
