change SEO titles

--- a/docs/references/go/other-examples.mdx
+++ b/docs/references/go/other-examples.mdx
@@ -1,5 +1,5 @@
 ---
-title: Examples | Go
+title: Examples | Clerk Go SDK
 description: Explore different examples of how to utilize Clerk with Go.
 ---
 
