--- a/docs/references/nodejs/token-verification.mdx
+++ b/docs/references/nodejs/token-verification.mdx
@@ -1,5 +1,5 @@
 ---
-title: Networkless token verification
+title: Networkless token verification | Clerk Node.js SDK
 description: Clerk's JWT session token can be verified in a networkless manner using the JWT verification key.
 ---
 
