--- a/docs/testing/overview.mdx
+++ b/docs/testing/overview.mdx
@@ -13,9 +13,7 @@ Testing is an important part of every application. Clerk has built some helpers 
 
 ## Testing with one time passcodes
 
-To confirm that your integration works correctly, you can simulate verification flows without sending an email or SMS, by using reserved values in test mode.
-
-To avoid sending an email or SMS message with a one time passcode (OTP) during testing, you can use a faux email address or phone number that has fixed verification values. Read the complete documentation [here](https://clerk.com/docs/testing/test-emails-and-phones).
+To avoid sending an email or SMS message with a one time passcode (OTP) during testing, you can use a faux email address or phone number that has a fixed code. Read the complete documentation [here](https://clerk.com/docs/testing/test-emails-and-phones).
 
 ## Testing Frameworks
 
