Updated Props table for SignIn and SignUp

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -118,6 +118,7 @@ All props below are optional.
             <li>path: Path-based routing.</li> 
             <li>virtual: Virtual-based routing.</li>
           </ul>
+          Note: If you are using Environment Variables to specify your routes, this will override to 'path'.
         </>,
       ],
     },
