--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -101,7 +101,7 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `appearance` | `object` | Controls the overall look and feel of the component. See [Appearance](/docs/components/customization/overview) for more information. |
-| `routing` | `string` | The routing strategy for your pages.<br />Supported values are: <ul><li>hash (default): Hash-based routing.</li> <li>path: Path-based routing.</li> <li>virtual: Virtual-based routing</li></ul> |
+| `routing` | `string` | The routing strategy for your pages.<br />Supported values are: <ul><li>hash (default): Hash-based routing.</li> <li>path: Path-based routing.</li> <li>virtual: Virtual-based routing</li></ul>Note: If you are using Environment Variables to specify your routes, this will override to 'path'.|
 | `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-up. |
 | `redirectUrl` | `string` | Full URL or path to navigate to after successful sign in or sign up.<br />The same as setting afterSignInUrl and afterSignUpUrl to the same value. |
 | `afterSignInUrl` | `string` | The full URL or path to navigate to after a successful sign in. |
