Updated note to be more clear.

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -118,7 +118,7 @@ All props below are optional.
             <li>path: Path-based routing.</li> 
             <li>virtual: Virtual-based routing.</li>
           </ul>
-          Note: If you are using Environment Variables to specify your routes, this will override to 'path'.
+          Note: If you are using Environment Variables for Next or Remix to specify your routes, this will override to 'path'.
         </>,
       ],
     },
