feat: Replace invitationList with invitations in useOrganization (revise)

--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -23,9 +23,21 @@ const {
   These attributes are updating automatically and will re-render their respective components whenever you set a different organization using the [`setActive({ organization })`](/docs/references/javascript/clerk/session-methods#set-active) method or update any of the memberships or invitations. No need for you to manage updating anything manually.
 </Callout>
 
+## Usage
+
+<Callout type="warning">
+  Make sure you've followed the installation guide for [Clerk React](/docs/references/react/overview) before running the snippets below.
+</Callout>
+
+In the following example, `useOrganization()` is used to map over the `memberships` of the current active organization and present membership attributes. In addition, buttons support navigating through the paginated response.
+
+<Callout type="info">
+  Note that your component must be a descendant of [`<ClerkProvider/>`](/docs/components/clerk-provider).
+</Callout>
+
 ### Expanding and paginating attributes
 
-To keep network usage to a minimum but to also provide a smooth auto-updating experience to developers, we made the `invitationList` attribute available only when its respective parameter is present when calling the hook.
+To keep network usage to a minimum, we require developers to opt-in by specifying which resource they need to fetch and paginate through.
 
 ```jsx
 const { invitations } = useOrganization();
@@ -53,19 +65,6 @@ const { invitations } = useOrganization({
 
 ```
 
-In addition, we support a paginated response with page fetching helper functions for `memberships`, `membershipRequests`, and `domains`. See [usage](#usage) below for an example.
-
-## Usage
-
-<Callout type="warning">
-  Make sure you've followed the installation guide for [Clerk React](/docs/references/react/overview) before running the snippets below.
-</Callout>
-
-In the following example, `useOrganization()` is used to map over the `memberships` of the current active organization and present membership attributes. In addition, buttons support navigating through the paginated response.
-
-<Callout type="info">
-  Note that your component must be a descendant of [`<ClerkProvider/>`](/docs/components/clerk-provider).
-</Callout>
 
 ### Infinite pagination
 ```jsx
