--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -11,6 +11,10 @@ The `useOrganizationList` hook allows you to retrieve the memberships, invitatio
 
 The `useOrganizationList` hook requires developers to opt-in by specifying which resource they need to fetch and paginate through. It is ideal for infinite lists or tables.
 
+<Callout type="info">
+    Note that your component must be a descendant of [`<ClerkProvider/>`](/docs/components/clerk-provider).
+</Callout>
+
 ### Infinite list of joined organizations
 <CodeBlockTabs options={['Next.js', 'React']}>
 ```tsx filename="pages/joined-organizations.tsx"
