feat: Introduce Organization Domains

--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -96,8 +96,13 @@ In addition to the methods listed above, the [`Organization`][org-ref] class als
 
 ### Invitations
 
-*   [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations)
+*   Deprecated [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations)
+*   [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations)
 *   [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
 *   [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
+
+### Domains
+*   [`getDomains()`](/docs/references/javascript/organization/domains#get-domains)
+*   [`getDomain()`](/docs/references/javascript/organization/domains#get-domain)
 
 [org-ref]: /docs/references/javascript/organization/organization
