Migrate /upgrade-guides from Sanity to MDX (#349)

--- a/docs/upgrade-guides/api-keys.mdx
+++ b/docs/upgrade-guides/api-keys.mdx
@@ -1,5 +1,29 @@
 ---
-sanity_slug: /docs/upgrade-guides/api-keys
+title: Publishable and Secret Keys
+description: Dive into Clerk's latest V3 update.
 ---
 
-# This is a stub
+# Publishable and Secret Keys
+
+<Callout type="info">
+  If your application was created after January 18, 2023, you're already using Publishable and Secret Keys.
+</Callout>
+
+In early Clerk SDKs, developers were required to configure three keys:
+
+- Frontend API URL
+- API key
+- JWT key (depending on the SDK version)
+
+New SDKs have replaced these with two keys:
+
+- Publishable key (prefixed with `pk_test_` or `pk_live_`)
+- Secret key (prefixed with `sk_test_` or `sk_live_`)
+
+The name and format of these keys are common among developer tools, and we adopted them to provide a more familiar developer experience.
+
+Although legacy keys will remain operational, we have updated our documentation and code samples to use the new Publishable Key and Secret Key format.
+
+**Important: Legacy keys cannot be mixed with the new publishable and secret keys. It is important that you replace all keys at once.**
+
+We recommend updating at your earliest convenience.
