--- a/docs/upgrade-guides/url-based-session-syncing.mdx
+++ b/docs/upgrade-guides/url-based-session-syncing.mdx
@@ -1,5 +1,39 @@
 ---
-sanity_slug: /docs/upgrade-guides/url-based-session-syncing
+title: URL-based session syncing
+description: Development instances communicating with the Frontend API without third-party cookies.
 ---
 
-# This is a stub
+# URL-based session syncing
+
+Development instances created before December 6, 2022 communicate with Clerk's Frontend API using third-party cookies. More concretely, the authentication state of the current session is transported via a long-lived third-party cookie, between your frontend (e.g. `localhost:3000`) and the Frontend API (e.g. `clerk.happy.hippo-1.lcl.dev`).
+
+URL-based session syncing (previously known as Cookieless Development mode) is a new, experimental mode of operation for development instances, in which communication with the Clerk Frontend API is done via URL decoration instead.
+
+<Callout type="info">
+  This mode only applies to development instances. Production instances remain unaffected and continue communicating with Frontend API using first-party, HttpOnly cookies.
+</Callout>
+
+## Migrating to URL-based Session Syncing
+
+To opt-in to URL-based session syncing, perform the following steps:
+
+- In the Clerk Dashboard, navigate to your development instance's [Settings](https://dashboard.clerk.com/last-active?path=settings) page and toggle on **Enable URL-based session syncing**.
+- Upgrade `@clerk/clerk-react` to v4.4.5 or later. If your are importing `@clerk/clerk-js` to your project, use v4.18.0 or later.
+
+## Clerk Account Portal pages and redirects
+
+In URL-based session syncing mode, navigating from your application to your Clerk [Account Portal](/docs/account-portal/overview) pages must be done using the Clerk redirection helpers and Control Components as shown in the following table:
+
+| Destination page | React component | Helper |
+| --- | --- | --- |
+| Sign-up | [`<RedirectToSignUp />`](/docs/components/control/redirect-to-signup) | [`Clerk.redirectToSignUp()`](/docs/references/javascript/clerk/redirect-methods#redirect-to-sign-up) |
+| Sign-in | [`<RedirectToSignIn />`](/docs/components/control/redirect-to-signin) | [`Clerk.redirectToSignIn()`](/docs/references/javascript/clerk/redirect-methods#redirect-to-sign-in) |
+| User profile | [`<RedirectToUserProfile />`](/docs/components/control/redirect-to-userprofile) | [`Clerk.redirectToUserProfile()`](/docs/references/javascript/clerk/redirect-methods#redirect-to-user-profile) |
+| Create organization | [`<RedirectToCreateOrganization />`](/docs/components/control/redirect-to-createorganization) | [`Clerk.redirectToCreateOrganization()`](/docs/references/javascript/clerk/redirect-methods#redirect-to-create-organization) |
+| Organization profile | [`<RedirectToOrganizationProfile />`](/docs/components/control/redirect-to-organizationprofile) | [`Clerk.redirectToOrganizationProfile()`](/docs/references/javascript/clerk/redirect-methods#redirect-to-organization-profile) |
+
+For custom HTML anchors use the Clerk.[`redirectWithAuth`](/docs/references/javascript/clerk/redirect-methods#redirect-with-auth) helper:
+
+```jsx
+<a onClick={() => clerk.redirectWithAuth('your_destination_url')}>My link</a>
+```
