--- a/docs/backend-requests/handling/go.mdx
+++ b/docs/backend-requests/handling/go.mdx
@@ -20,7 +20,7 @@ import (
 )
 
 func main() {
-	client, _ := clerk.NewClient(sk_test_••••••••••••••••••••••••••••••••••)
+	client, _ := clerk.NewClient({{secret}})
 
 	mux := http.NewServeMux()
 
