--- a/docs/backend-requests/handling/go.mdx
+++ b/docs/backend-requests/handling/go.mdx
@@ -7,7 +7,7 @@ description: Learn how to handle authenticated requests with Go middleware using
 
 ## Go Middleware
 
-The Clerk Go SDK provides a simple middleware that adds the active session to the request’s context.
+The Clerk Go SDK provides an easy-to-use middleware that adds the active session to the request’s context.
 
 <InjectKeys>
 
