--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -5,7 +5,7 @@ description: Learn how to integrate Go into your Clerk application.
 
 # Go
 
-Clerk's Go SDK is a thin wrapper over our Backend API. Add the following import statement:
+Clerk's Go SDK is a thin wrapper over the Clerk Backend API. Add the following import statement:
 
 ```go
 import "github.com/clerkinc/clerk-sdk-go/clerk"
