Migrate /references/go from Sanity to MDX (#357)
Co-authored-by: Bryce Kalow <bryce@clerk.dev>

--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -1,5 +1,36 @@
 ---
-sanity_slug: /docs/reference/golang/getting-started
+title: Clerk Go SDK
+description: Learn how to integrate Go into your Clerk application.
 ---
 
-# This is a stub
+# Go
+
+Clerk's Go SDK is a thin wrapper over the Clerk Backend API. Add the following import statement:
+
+```go
+import "github.com/clerkinc/clerk-sdk-go/clerk"
+```
+
+Go doesn't automatically add the module. You can explicitly add it with:
+
+```go
+$ go get github.com/clerkinc/clerk-sdk-go
+```
+
+## `Clerk` client
+
+Now, you can create a `Clerk` client by calling the `clerk.NewClient` function. This function requires your Clerk secret key. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon. You can also retrieve your Clerk secret key from the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard.
+
+With your Clerk secret key, create a `Client` object to use the various services Clerk provides.
+
+<InjectKeys>
+
+```go filename=".env"
+client, err := clerk.NewClient({{secret}})
+if err != nil {
+    // handle error
+} 
+```
+
+</InjectKeys>
+
