Add `organizationProfileProps` to OrganizationSwitcher props

--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -163,7 +163,6 @@ All props below are optional.
         </>,
       ],
     },
-
     {
       cells: [
         <code>defaultOpen</code>,
@@ -171,5 +170,16 @@ All props below are optional.
         <>Controls the default state of the <code>{"<OrganizationSwitcher />"}</code></>,
       ],
     },
+    {
+      cells: [
+        <code>organizationProfileProps</code>,
+        <code>object</code>,
+        <>
+          Specify options for the underlying <code>{"<OrganizationProfile />"}</code> component.
+          <br/>
+          e.g. <code>{"{appearance: {...}}"}</code>
+        </>,
+        ],
+      },
   ]}
 />
