--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -152,6 +152,7 @@ All props below are optional.
 | `afterSwitchOrganizationUrl` | `string` | Full URL or path to navigate after a successful organization switch. |
 | `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether [`<OrganizationSwitcher />`][orgswitcher-ref] will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to: `true` |
 | `defaultOpen` | `boolean` | Controls the default state of the [`<OrganizationSwitcher />`][orgswitcher-ref] component. |
+| `organizationProfileProps` | `object` | Specify options for the underlying [`<OrganizationProfile />`][orgprofile-ref] component.<br />e.g. `{appearance: {...}}` |
 
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
